[package]
name = "first-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", features = ["ws", "rustls"]}
tokio = { version = "1.18", features = ["full"] }
artemis-core = { git = "https://github.com/paradigmxyz/artemis" }
clap = { version = "4.2.5", features = ["derive"] }
anyhow = "1.0.70"
async-trait = "0.1.64"
mev-share = "0.1.4"
